--- a/index.html
+++ b/index.html
@@ -880,4 +880,8 @@
                     </div>
                     
                     <div class="form-group">
+
                         <label for="email">Email
+                            <label for="email">Email</label>
+                        <input type="text" id="email" name="email" required>
+                    </div>
