--- a/index.html
+++ b/index.html
@@ -881,7 +881,8 @@
                     
                     <div class="form-group">
 
-                        <label for="email">Email
+                        <label for="email">
                             <label for="email">Email</label>
                         <input type="text" id="email" name="email" required>
                     </div>
+
