--- a/index.html
+++ b/index.html
@@ -885,4 +885,29 @@
                             <label for="email">Email</label>
                         <input type="text" id="email" name="email" required>
                     </div>
+                    <div class="form-group">
+    <label for="message">Message</label>
+    <textarea id="message" name="message" rows="5" required></textarea>
+</div>
+
+<button type="submit" class="submit-btn">Send Message</button>
+</form>
+</div>
+</div>
+</section>
+
+<!-- Footer -->
+<footer>
+    <div class="social-links">
+        <a href="https://github.com/KhushbuSoni18" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/khushbu-soni18" target="_blank">LinkedIn</a>
+       
+    </div>
+    <p>&copy; 2025 Khushbu Soni. All rights reserved.</p>
+</footer>
+
+<script src="script.js"></script>
+</body>
+</html>
+
 
